--- a/listview/listoverview.css
+++ b/listview/listoverview.css
@@ -4,7 +4,9 @@
 }
 th{
     cursor: pointer;
-    color:#457;
+    color:#fff;
+    background-color: #333;
+
         }
 
 .header-class {
@@ -20,6 +22,11 @@ th{
   display: grid;
   grid-template-columns: 300px 1fr;
   grid-template-rows: 100px;
+}
+
+.desktopwrapper{
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .settings {
@@ -57,9 +64,9 @@ th{
 }
 
 th, tr, td {
-  padding-right: 50px;
-  align-items: center;
+  text-align: left;
   height: 40px;
+  padding-left: 5px;
 }
 
 .titleO {
@@ -70,4 +77,97 @@ th, tr, td {
 select{
   height: 20px;
   width: 20px;
+}
+
+table{
+  width: 100%;
+}
+
+th {
+  border: 0;
+}
+
+.hide {
+  display: none;
+}
+
+.img-machine {
+  width: 40px;
+  height: 40px;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+}
+
+
+/* CSS for mobile*/
+
+.machinelist {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.id037 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row: 1/2;
+}
+
+.mobile-title {
+  grid-column: 1/5;
+  grid-row: 1/2;
+  margin-bottom: 10px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.fa-tasks {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  font-size: 50px;
+
+}
+
+.fa-tasks:hover {
+  cursor: pointer;
+}
+
+.dates {
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 25px;
+  align-items: center;
+}
+
+.icon-mobile {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-size: 35px;
+  align-items: center;
+}
+
+.id001 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row: 2/3;
+  grid-column: 1/5;
+}
+
+.mobile-title2 {
+  grid-column: 1/5;
+  grid-row: 1/2;
+  margin-bottom: 10px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.id055 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row: 3/4;
+  grid-column: 1/5;
 }
