--- a/listview/listoverview.css
+++ b/listview/listoverview.css
@@ -171,3 +171,17 @@ th {
   grid-row: 3/4;
   grid-column: 1/5;
 }
+
+.id048 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row: 4/5;
+  grid-column: 1/5;
+}
+
+.id024 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-row: 5/6;
+  grid-column: 1/5;
+}
