--- a/css/main-report.css
+++ b/css/main-report.css
@@ -1,10 +1,12 @@
 #template {
   position: absolute;
-  margin-top: 170px;
+  margin-top: 172px;
   top: 0;
   right: 0;
   background-color: #ffffff;
   width: 75%;
+  border-top: 2px solid #333;
+  border-left: 2px solid #333; 
 }
 .todo-wrapper {
   display: grid;
