--- a/css/listoverview.css
+++ b/css/listoverview.css
@@ -2,12 +2,18 @@
   margin: 0;
   padding: 0;
 }
+
 th{
     cursor: pointer;
     color:#fff;
     background-color: #333;
 
-        }
+  }
+
+  .hover-click{
+  cursor: pointer;
+  font-weight: bold;
+  }
 
 .header-class {
   display: grid;
@@ -20,10 +26,13 @@ th{
 
 .header-for-overview {
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
   grid-template-rows: 100px;
 }
 
+.titleO {
+  margin-left: 20px;
+}
 .desktopwrapper{
   display: grid;
   grid-template-columns: 1fr;
@@ -31,13 +40,18 @@ th{
 
 .settings {
   display: grid;
-  grid-template-columns: 200px 1fr 1fr 1fr 1fr;
+  grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content)minmax(min-content, max-content);
   align-items: center;
+  margin-left: 20px;
+}
+
+.settings p {
+  margin-top: 10px;
 }
 
 .view-all{
   display: grid;
-  grid-template-columns: minmax(min-content, max-content) 1fr;
+  grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
   align-items: center;
 }
 
@@ -45,18 +59,26 @@ th{
   display: grid;
   grid-template-columns: minmax(min-content, max-content) 1fr;
   align-items: center;
+  margin-left: 20px;
 }
 
 .entries-wrapper {
   display: grid;
   grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content);
   align-items: center;
+  margin-left: 20px;
 }
 
 .resource-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
   align-items: center;
+  margin-left: 20px;
+}
+
+#search-input{
+  margin-left: 20px;
+  border-radius: 2px;
 }
 
 .table-wrapper {
@@ -66,7 +88,7 @@ th{
 th, tr, td {
   text-align: left;
   height: 40px;
-  padding-left: 5px;
+  padding-left: 20px;
 }
 
 .titleO {
@@ -76,16 +98,45 @@ th, tr, td {
 
 select{
   height: 20px;
-  width: 20px;
+  width: 40px;
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-top: 9px;
+  border-radius: 2px;
+}
+
+.blue-wrapper {
+display: flex;
+}
+
+.resource-wrapper select{
+width: 70px;
+}
+
+.blue-block{
+  margin-left: 40%;
+  width: 25px;
+  height: 25px;
 }
 
 table{
   width: 100%;
+  border-collapse: collapse;
+}
+
+tr:nth-child(even) {
+  background: #FFF;
+}
+tr:nth-child(odd) {
+  background:#DCE5EE;
 }
 
 th {
   border: 0;
+  border-top: 2px solid #333;
+
 }
+
 
 .hide {
   display: none;
@@ -99,6 +150,13 @@ th {
   align-items: center;
 }
 
+th .white {
+  color: #fff;
+}
+
+th {
+  color:#337AB7;
+}
 
 /* CSS for mobile*/
 
