dobbeltklik og knap style
skiftet fra double click til singel click (virker ikke i html????)

givet buttons classes så de kan styles.

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -8,6 +8,7 @@
   right: 0;
   background-color: #ffffff;
   border-top: 2px solid #333;
+  border-left: 2px solid #333;
 }
 
 .calendar-wrapper{
@@ -28,9 +29,6 @@
   margin-top: 15px;
 }
 
-.current-year {
-  display: inline-block;
-}
 
 .btn-c {
   background-color: white;
