--- a/css/listoverview.css
+++ b/css/listoverview.css
@@ -40,7 +40,9 @@ th{
 
 .settings {
   display: grid;
-  grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 1fr) minmax(min-content, 1fr) minmax(min-content, 1fr)minmax(min-content, 1fr);
+  grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content)minmax(min-content, max-content);
+  align-items: center;
+  position: absolute;
   right: 0;
   margin-left: 20px;
 
