--- a/css/listoverview.css
+++ b/css/listoverview.css
@@ -40,11 +40,10 @@ th{
 
 .settings {
   display: grid;
-  grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content)minmax(min-content, max-content);
-  align-items: center;
-  position: absolute;
+  grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 1fr) minmax(min-content, 1fr) minmax(min-content, 1fr)minmax(min-content, 1fr);
   right: 0;
   margin-left: 20px;
+  
 
 }
 
