--- a/css/listoverview.css
+++ b/css/listoverview.css
@@ -40,8 +40,11 @@ th{
 
 .settings {
   display: grid;
-  grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 1fr) minmax(min-content, 1fr) minmax(min-content, 1fr)minmax(min-content, 1fr);
+  grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content)minmax(min-content, max-content);
+  align-items: center;
+  position: absolute;
   right: 0;
+  top: 95px;
   margin-left: 20px;
 
 
@@ -75,8 +78,6 @@ th{
   display: grid;
   grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content);
   align-items: center;
-  position: absolute;
-  right: 0;
   margin-left: 20px;
 }
 
