--- a/css/calendar.css
+++ b/css/calendar.css
@@ -164,6 +164,7 @@ margin: 5px;
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  border: none;
 }
 
 /* Modal Content/Box */
@@ -171,18 +172,28 @@ margin: 5px;
   background-color: #fefefe;
   margin: 15% auto;  15% from the top and centered */
   padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
+}
+
+.datecontent h3 {
+  display: block;
+  background-color: #333;
+  color: white;
+  border-radius: 2px;
+  font-weight: bold;
+  height: 35px;
+  padding-left: 8px;
+  width: 100%;
+  padding-top: 7px;
 }
 
 /* The Close Button */
-.closedate {
+.closedate .fas {
   color: #337AB7;
   float: right;
-  font-size: 28px;
+  font-size: 14px;
   font-weight: bold;
   padding-right: 10px;
-  padding-top: 3px;
 }
 
 .closedate:hover,
