--- a/css/listoverview.css
+++ b/css/listoverview.css
@@ -67,6 +67,10 @@ th{
   margin-left: 48px;
 }
 
+.cal-view .fas {
+  cursor: pointer;
+}
+
 .entries-wrapper {
   display: grid;
   grid-template-columns: minmax(min-content, max-content) minmax(min-content, max-content) minmax(min-content, max-content);
@@ -247,4 +251,11 @@ th {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-row: 5/6;
   grid-column: 1/5;
+}
+
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
 }
