--- a/css/listoverview.css
+++ b/css/listoverview.css
@@ -133,6 +133,12 @@ table{
   border-collapse: collapse;
 }
 
+#myTable td {
+  padding-top: 4px;
+  padding-bottom: 4px;
+
+}
+
 tr:nth-child(even) {
   background: #FFF;
 }
