--- a/css/calendar.css
+++ b/css/calendar.css
@@ -155,25 +155,25 @@ margin: 5px;
 
 
 .mydatebox {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
   border: none;
 }
 
-/* Modal Content/Box */
+
 .datecontent {
   background-color: #fefefe;
-  margin: 15% auto;  15% from the top and centered */
+  margin: 15% auto;  15%
   padding: 20px;
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 40%;
 }
 
 .datecontent h3 {
@@ -188,7 +188,7 @@ margin: 5px;
   padding-top: 7px;
 }
 
-/* The Close Button */
+
 .closedate .fas {
   color: #337AB7;
   float: right;
