--- a/styleguide/styleguide.css
+++ b/styleguide/styleguide.css
@@ -185,3 +185,52 @@ font-family: 'Archivo Black', sans-serif;
 
 
 /* NOTE: rapport div */
+
+
+/* Colors */
+
+.colour1 {
+  background-color: #333;
+  height: 50px;
+
+}
+
+.colour2 {
+  background: #DCE5EE;
+  height: 50px;
+}
+
+.colour3 {
+  background: #fff;
+  height: 50px;
+}
+
+.colour4 {
+  background: #337AB7;
+  height: 50px;
+}
+
+.colour5 {
+  background: #F0AD4E;
+  height: 50px;
+}
+
+.colour6 {
+  background: #5CB85C;
+  height: 50px;
+}
+
+.colour7 {
+  background: #D9534F;
+  height: 50px;
+}
+
+.colour8 {
+  background: #9ba2bb;
+  height: 50px;
+}
+
+.colour9 {
+  background: #90EE90;
+  height: 50px;
+}
