--- a/styleguide/styleguide.css
+++ b/styleguide/styleguide.css
@@ -234,3 +234,27 @@ font-family: 'Archivo Black', sans-serif;
   background: #90EE90;
   height: 50px;
 }
+
+
+.btn-g {
+  display: flex;
+  justify-content: center;
+ margin-right: 26px;
+ margin-top: 24px;
+ padding-left: 24px;
+ padding-right: 24px;
+ padding-top: 6px;
+ padding-bottom: 6px;
+ border: none;
+ background-color: #5CB85C;
+ color: #fff;
+ border-radius: 2px;
+ font-weight: bold;
+ cursor: pointer;
+}
+
+
+.pics {
+  height: 100%;
+  background-color: #333;
+}
